[gd_scene load_steps=7 format=2]

[ext_resource path="res://Actors/EnemyMage.gd" type="Script" id=1]
[ext_resource path="res://Assets/icon.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 34.0384, 32 )

[sub_resource type="Animation" id=2]
resource_name = "walk"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 472, 196 ), Vector2( 808, 200 ) ]
}

[sub_resource type="CircleShape2D" id=3]
radius = 448.286

[sub_resource type="CircleShape2D" id=4]
radius = 200.04

[node name="Mage" type="KinematicBody2D"]
position = Vector2( 472, 196 )
collision_layer = 4
script = ExtResource( 1 )

[node name="icon" type="Sprite" parent="."]
modulate = Color( 0.454902, 0.176471, 0.768627, 1 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/walk = SubResource( 2 )

[node name="DetectionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
modulate = Color( 0.796078, 0.858824, 0.235294, 0.356863 )
shape = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Area2D-AtkRng" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D-AtkRng"]
shape = SubResource( 4 )
[connection signal="body_entered" from="DetectionArea" to="." method="_on_DetectionArea_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_DetectionArea_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Area2D-AtkRng" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D-AtkRng" to="." method="_on_Area2D_body_exited"]
